added bower component

--- a/frontend/index.jade
+++ b/frontend/index.jade
@@ -1,5 +1,5 @@
 extends layout
 
 block content
-  h1= title
-  p Namma crossfit
+  script(data-main="main" src="/assets/libs/requirejs/require.js")
+ 
