--- a/frontend/layout.jade
+++ b/frontend/layout.jade
@@ -3,5 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/assets/custom/css/style.css')
+    link(rel='stylesheet', href='/assets/libs/bootstrap/dist/css/bootstrap.min.css')
+    meta(content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport")
   body
     block content
